Attemptig to link Mailchimp

--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
             <div>Suelo is the easiest place to collect, manage and present all product feedback.<br />
             Pre-registered now to use Suelo for a whole year for FREE!</div>
         </h3>
-<form>
-        <input id="email_input" ype="email" placeholder="Enter email address" t autofocus="on" autocomplete="off">
+        
+<form id="newsletter" action="https://suelo.us7.list-manage.com/subscribe/post-json?u=f050a67cfb8f9a22bb7e18bfc&amp;id=dc62017b1c&amp;c=" class="validate" method="post">
+        <input id="email_input" type="email" placeholder="Enter email address" t autofocus="on" autocomplete="off" pattern="^([^\x00-\x20\x22\x28\x29\x2c\x2e\x3a-\x3c\x3e\x40\x5b-\x5d\x7f-\xff]+|\x22([^\x0d\x22\x5c\x80-\xff]|\x5c[\x00-\x7f])*\x22)(\x2e([^\x00-\x20\x22\x28\x29\x2c\x2e\x3a-\x3c\x3e\x40\x5b-\x5d\x7f-\xff]+|\x22([^\x0d\x22\x5c\x80-\xff]|\x5c[\x00-\x7f])*\x22))*\x40([^\x00-\x20\x22\x28\x29\x2c\x2e\x3a-\x3c\x3e\x40\x5b-\x5d\x7f-\xff]+|\x5b([^\x0d\x5b-\x5d\x80-\xff]|\x5c[\x00-\x7f])*\x5d)(\x2e([^\x00-\x20\x22\x28\x29\x2c\x2e\x3a-\x3c\x3e\x40\x5b-\x5d\x7f-\xff]+|\x5b([^\x0d\x5b-\x5d\x80-\xff]|\x5c[\x00-\x7f])*\x5d))*(\.\w{2,})+$" required>
         <button type="submit">Pre-registered</button>
 </form>
         <br />
@@ -171,9 +172,16 @@
                     <div class='main-footer_middle'>
                     © 2021 Smelly Ventures Inc.
                     </div>
-     
         </footer>
 
+
+        <!-- Bootstrap core JavaScript
+                ================================================== -->
+        <!-- Placed at the end of the document so the pages load faster -->
+        <script src="js/vendor/jquery/3.5.1/jquery-3.5.1.min.js"></script>
+        <script src="js/vendor/bootstrap/4.5.3/bootstrap.min.js"></script>
+        <!-- Mailchimp + validations JavaScript
+                ================================================== -->
     <script src="script.js"></script>
 </body>
 </html>
